# Firefly

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Docs/: FireflyVStockfish_10g.pgn
src/: config.h  main.cpp  pch.h
src/chess/: board.cpp  board.h
src/chess/constants/: bishop_attacks.cpp  bishop_attacks.h  constants.cpp  constants.h  rook_attacks.cpp  rook_attacks.h
src/engine/: engine_interface.cpp  engine_interface.h
src/engine/mcts/: memory.cpp  memory.h  node.cpp  node.h  search.cpp  search.h
src/engine/neural/: lc0_network.cpp  lc0_network.h  network_manager.h
src/engine/neural/utils/: compressed_policy_map.h  inverted_policy_map.h  policy_map_to_flattened.h  uncompressed_policy_map.h
src/testing/: board_test.cpp  board_test.h  chess_gui.cpp  chess_gui.h  neural_net_tests.cpp  nnue_tests.cpp  timer.cpp  timer.h
src/utils/: bit_manip.h  fsts_queue.h  logger.cpp  logger.h  utils.cpp  utils.h
